--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap</title>
+  <title>Turismo</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
@@ -11,7 +11,7 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Tienditas.MX</a>
+    <a class="navbar-brand" href="#">BajaTours</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,13 +22,13 @@
           <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Productos</a>
+          <a class="nav-link" href="#">Servicios</a>
         </li>
 
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
@@ -50,24 +50,24 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="1.jpg" class="d-block w-100" alt="...">
+        <img src="1.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>La red de tienditas más grande de México</h5>
-          <p>Somos más de 150,000 tienditas en toda la república.</p>
+          <h5>La mejor empresa de turísmo en Baja California Sur</h5>
+          <p>Contamos con la mejor infraestructura para brindarte el mejor servicio.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="2.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Generadores de empleo en México</h5>
-          <p>Hemos generado mas de 200,00 empleos.</p>
+          <h5>Las mejores playas estan en BCS</h5>
+          <p>Las playas más hermosas de México están en nuestro estado.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="3.jpg" class="d-block w-100" alt="...">
+        <img src="3.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Alianzas con las mejores marcas</h5>
-          <p>Los mejores productos al alcance de todo México</p>
+          <h5>Un lugar para disfrutar</h5>
+          <p>¿Buscas una aventura emocionante?¿Una playa tranquila? Tenemos el destino perfecto para ti.</p>
         </div>
       </div>
     </div>
@@ -84,11 +84,10 @@
   <div class="row">
     <div class="card-deck" style="margin-top: 20px;">
       <div class="card">
-        <img src="1.jpg" class="card-img-top" alt="...">
+        <img src="1.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Descarga nuestra app</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-            This content is a little bit longer.</p>
+          <p class="card-text">Puedes ver todos nuestros servicios y hacer tus reservaciones directamente en nuestra app.</p>
         </div>
         <div class="card-footer">
           <small class="text-muted">Disponible para Android y iOS</small>
@@ -97,22 +96,21 @@
       <div class="card">
         <img src="2.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Aumenta tus ventas</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Descuento para nacionales</h5>
+          <p class="card-text">Tenemos un precio especial para todas las personas que sean mexicanas y muestren su INE vigente.</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted">Aumento de ventas comprobado</small>
+          <small class="text-muted">Válido durante todo el año</small>
         </div>
       </div>
       <div class="card">
-        <img src="3.jpg" class="card-img-top" alt="...">
+        <img src="3.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Aprovecha nuestro sistema</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-            This card has even longer content than the first to show that equal height action.</p>
+          <h5 class="card-title">Promociones inigualables</h5>
+          <p class="card-text">¡Cada mes tenemos promociones únicas que te harán disfrutar al máximo!</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted">El mejor sistema de tienditas en México</small>
+          <small class="text-muted">Sujeto a disponibilidad</small>
         </div>
       </div>
     </div>
@@ -124,8 +122,8 @@
   <div class="container"style="margin-top: 50px;">
     <div class="row">
       <div class="col-sm-4">
-        <h1>Abarrotes</h1>
-        <p>
+        <h1>Misión</h1>
+        <p style="text-align: justify;">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -133,11 +131,10 @@
           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="">Leer mas</a>
       </div>
       <div class="col-sm-4">
-        <h1>Vinos</h1>
-        <p>
+        <h1>Visión</h1>
+        <p style="text-align: justify;">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -145,11 +142,10 @@
           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="">Leer mas</a>
       </div>
       <div class="col-sm-4">
-        <h1>Licores</h1>
-        <p>
+        <h1>Trayectoria</h1>
+        <p style="text-align: justify;">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -157,48 +153,103 @@
           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="">Leer mas</a>
       </div>
     </div>
   </div>
 
   <div class="container" style="margin-top: 50px;">
-    <table class="table table-hover">
-      <thead>
+    <table class="table">
+      <thead class="thead-dark">
         <tr>
           <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Launch demo modal
-          </button></th>
+          <th scope="col">Tour</th>
+          <th scope="col">Duración</th>
+          <th scope="col">Reservación</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
+          <td>Nado con Tiburón Ballena</td>
+          <td>3:00 hrs</td>
+          <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Reservar
+          </button></td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
+          <td>Paddle Board</td>
+          <td>1:30 hrs</td>
+          <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Reservar
+          </button></td>
         </tr>
         <tr>
           <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
+          <td>Mountain Bike La Ventana MTB Park</td>
+          <td>4:00 hrs</td>
+          <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Reservar
+          </button></td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>Ecoturismo en Loreto</td>
+          <td>48 hrs</td>
+          <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+              Reservar
+            </button></td>
         </tr>
       </tbody>
     </table>
   </div>
-  
 
-
-
+  <section id="footer">
+    <div class="container">
+      <div class="row text-center text-xs-center text-sm-left text-md-left">
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <h5>BajaTorus</h5>
+          <ul class="list-unstyled quick-links">
+            <li><a href="#"><i class="fa fa-angle-double-right"></i>Inicio</a></li>
+            <li><a href="#"><i class="fa fa-angle-double-right"></i>Productos</a></li>
+            <li><a href="#"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+            <li><a href="#"><i class="fa fa-angle-double-right"></i>Reservaciones</a></li>
+            <li><a href="#"><i class="fa fa-angle-double-right"></i>Facturación</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <h5>Contacto</h5>
+          <ul class="list-unstyled quick-links">
+            <li><a href="#"></i>La Paz, B.C.S.</a></li>
+            <li><a href="#"></i>C.P. 25000</a></li>
+            <li><a href="#"></i>Mx. </a></li>
+            <li><a href="#"></i>Tel: 612 123 4567</a></li>
+            <li><a href="#"></i>Email: contacto@bajatours.com</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+          <ul class="list-unstyled list-inline social text-center">
+            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item"><a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+        <hr>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+          <p class="h6">© Todos los derechos reservados.<a class="text-green ml-2" href="#"
+              target="_blank">BajaTours</a></p>
+        </div>
+        <hr>
+      </div>
+    </div>
+  </section>
   
   
   <!-- Modal -->
@@ -206,40 +257,69 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Registro</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Reservar</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form action="validar()">
+        <form >
           <div class="container">
             <div class="form-group">
               <label for="exampleInputEmail1">Nombre completo</label>
-              <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="nombre" aria-describedby="emailHelp">
               <small id="emailHelp" class="form-text text-muted">Tu información esta segura con nosostros.</small>
             </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Nombre de tu tiendita</label>
+              <label for="exampleFormControlSelect1">Actividad</label>
+              <select class="form-control" id="actividad">
+                <option>Elige una...</option>
+                <option>Nado con Tiburón Ballena</option>
+                <option>Paddle Board</option>
+                <option>Mountain Bike La Ventana MTB Park</option>
+                <option>Ecoturismo en Loreto</option>
+              </select>
+            </div>
+            <div class="form-row align-items-center">
+              <div class="col-auto my-1">
+                <h5>Personas</h5>
+                <label class="mr-sm-2 sr-only" for="cantidad">Preference</label>
+                <select class="custom-select mr-sm-2" id="cantidad">
+                  <option selected>Elige...</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                  <option value="11">11</option>
+                  <option value="12">12</option>
+                </select>
+              </div>
+              <div class="col-auto my-1">
+                <div class="custom-control custom-checkbox mr-sm-2">
+                  <input type="checkbox" class="custom-control-input" id="discapacidad">
+                  <label class="custom-control-label" for="discapacidad">Persona con discapacidad</label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
               <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
             </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email</label>
-              <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Contraseña</label>
-              <input type="password" class="form-control" id="pass">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Repetir contraseña</label>
-              <input type="password" class="form-control" id="pass2">
+              <label for="email2">Confirma tu email</label>
+              <input type="email" class="form-control" id="email2">
             </div>
 
           </div>
         
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-            <button type="submit" class="btn btn-primary">Registrar</button>
+            <button type="submit" class="btn btn-primary" onclick="validar(this)">Reservar</button>
           </div>
         </div>
         </form>
@@ -251,14 +331,101 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script>
     function validar(target) {
-      if ($('#pass').val() == $('#pass2').val()) {
+      console.log($('#email').val());
+      console.log($('#email2').val());
+      if ($('#email').val() === $('#email2').val()) {
+        console.log(true);
         return true;
-      } 
-      return false;
+      }  else {
+        swal("Tu email no coincide", "Revisa tus datos!", "error");
+        $("#email").addClass('is-invalid');
+        $("#email2").addClass('is-invalid');
+        console.log(false);
+        return false;
+      }
     }
   </script>
+  <style>
+    
+        @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+    section {
+        padding: 60px 0;
+    }
+
+    section .section-title {
+        text-align: center;
+        color: #007b5e;
+        margin-bottom: 50px;
+        text-transform: uppercase;
+    }
+    #footer {
+        background: #0693c6 !important;
+    }
+    #footer h5{
+      padding-left: 10px;
+        border-left: 3px solid #eeeeee;
+        padding-bottom: 6px;
+        margin-bottom: 20px;
+        color:#ffffff;
+    }
+    #footer a {
+        color: #ffffff;
+        text-decoration: none !important;
+        background-color: transparent;
+        -webkit-text-decoration-skip: objects;
+    }
+    #footer ul.social li{
+      padding: 3px 0;
+    }
+    #footer ul.social li a i {
+        margin-right: 5px;
+      font-size:25px;
+      -webkit-transition: .5s all ease;
+      -moz-transition: .5s all ease;
+      transition: .5s all ease;
+    }
+    #footer ul.social li:hover a i {
+      font-size:30px;
+      margin-top:-10px;
+    }
+    #footer ul.social li a,
+    #footer ul.quick-links li a{
+      color:#ffffff;
+    }
+    #footer ul.social li a:hover{
+      color:#eeeeee;
+    }
+    #footer ul.quick-links li{
+      padding: 3px 0;
+      -webkit-transition: .5s all ease;
+      -moz-transition: .5s all ease;
+      transition: .5s all ease;
+    }
+    #footer ul.quick-links li:hover{
+      padding: 3px 0;
+      margin-left:5px;
+      font-weight:700;
+    }
+    #footer ul.quick-links li a i{
+      margin-right: 5px;
+    }
+    #footer ul.quick-links li:hover a i {
+        font-weight: 700;
+    }
+
+    @media (max-width:767px){
+      #footer h5 {
+        padding-left: 0;
+        border-left: transparent;
+        padding-bottom: 0px;
+        margin-bottom: 10px;
+    }
+    }
+
+  </style>
 </body>
 
 </html>
